tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_46.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((+ ((1 - 200) + (- 2))) > ((- (y + y)) MOD ((1 MOD x) MOD (+ y))));
               q := ((((0 DIV 200) MOD (1223 + x)) MOD ((0 * 200) DIV (+ 1))) < (((z - z) * (200 - z)) * (+ (0 MOD 0))));
               q := (~ (((+ x) MOD (1 * 1223)) # ((0 - y) - (0 - 1))));
               z := ((((z + 200) MOD (200 DIV 0)) DIV ((+ 0) + (1 MOD x))) * (+ ((1223 * y) MOD (200 DIV 0))));
               q := (((+ (2 + 1223)) - ((1 * 0) + (2 * y))) < (((y DIV 2) - (0 - 200)) DIV ((z MOD 200) MOD (- 2))));
               q := ((((+ 0) * (200 MOD y)) = ((2 + 0) MOD (x MOD 1223))) & ((- (1 + 200)) <= ((x DIV x) + (200 + 1))));
               r := ((+ ((2 * x) * (- x))) = (+ ((z DIV 2) * (z - y))));
               q := (((- (+ 1)) - (- (z + 1223))) < (((+ 200) * (- z)) MOD ((z * 2) DIV (+ 2))));
               z := (((+ (x + 2)) - ((z - 0) MOD (2 MOD 0))) + (- ((1 + y) + (y DIV 2))));
  (* error *)  r := ((((q * y) DIV (1 + 1223)) + ((2 DIV x) + (0 + 200))) > (((- 200) DIV (x MOD 0)) + ((1223 + 2) - (z + 200))))
END Test20.